--- a/index.html
+++ b/index.html
@@ -4,14 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
+        body, body * {
+            padding: 0;
+            margin: 0;
+            font-family: 'Press Start 2P', cursive;
+        }
+
+        body {
+            text-align: center;
+        }
+
+        h1 {
+            padding: 2em;
+        }
+
+        #newGame {
+            color: white;
+            background-color: green;
+            padding: 1em;
+            outline: ridge;
+            outline-color: black;
+
+        }
+        #newGame:hover, #newGame:focus {
+            outline-color: red;
+        }
+
+        .moveMessage, .gameMessage {
+            background-color: black;
+            color: yellow;
+            font-size: 1.5em;
+            padding: .25em;
+        }
+
         .gameBoard {
+            text-align: center;
+            padding: 1em;
             display: grid;
-            grid-template-columns: repeat(3, auto);
-            grid-template-rows: repeat(3, auto);
+            grid-template-columns: repeat(3, 5em);
+            grid-template-rows: repeat(3, 5em);
+            justify-content: center;
+            align-items: center;
         }
         .gameBoard div {
-            border: 1px solid black;
+            width: 100%;
+            height: 100%;
+            display: grid;
+            justify-content: center;
+            align-items: center;
+        }
+        .gameBoard div:hover {
+            outline: 3px ridge red;
+        }
+        .gameBoard span {
+            padding: .5em;
+            font-size: 2.5em;
+            transform: scale(1, 1) rotate(0);
+            overflow: visible;
+        }
+        .gameBoard div[value='0'] {
+            border-bottom: 1px solid black;
+            border-right: 1px solid black;
+        }
+        .gameBoard div[value='1'] {
+            border-bottom: 1px solid black;
+            border-right: 1px solid black;
+        }
+        .gameBoard div[value='2'] {
+            border-bottom: 1px solid black;
+        }
+        .gameBoard div[value='3'] {
+            border-bottom: 1px solid black;
+            border-right: 1px solid black;
+        }
+        .gameBoard div[value='4'] {
+            border-bottom: 1px solid black;
+            border-right: 1px solid black;
+        }
+        .gameBoard div[value='5'] {
+            border-bottom: 1px solid black;
+        }
+        .gameBoard div[value='6'] {
+            border-right: 1px solid black;
+        }
+        .gameBoard div[value='7'] {
+            border-right: 1px solid black;
+        }
+        .gameBoard .spin-in {
+            animation-name: spin-in;
+            animation-timing-function: ease-in;
+            animation-duration: .25s;
+            animation-delay: 0s;
+            animation-iteration-count: 1;
+        }
+        @keyframes spin-in {
+            from {
+                transform: scale(5, 5) rotate(360deg);
+            }
+            to {
+                transform: scale(1, 1) rotate(0);
+            }
         }
     </style>
     <title>Tic-Tac-Toe | The Odin Project</title>
